# k8s-example-drf-app

./: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.circleci/: config.yml
.github/workflows/: ci-dev.yml  ci.yaml
apps/: urls.py
apps/settings/: __init__.py
