[project]
name = "k8s-example-drf-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib==1.3.2",
    "celery==5.4.0",
    "channels==4.2.0",
    "channels-rabbitmq==4.0.1",
    "coverage==7.4.0",
    "cryptography==44.0.0",
    "daphne==4.1.2",
    "django==5.2",
    "django-allauth==65.0.2",
    "django-cors-headers==4.3.1",
    "django-environ==0.11.2",
    "django-filter==24.3",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "drf-spectacular>=0.28.0",
    "psycopg[binary,pool]==3.2.6",
    "python-dotenv==1.1.0",
    "setuptools==75.2.0",
    "tzlocal==5.2",
    "whitenoise==6.6.0",
]

[dependency-groups]
dev = [
    "colorlog==6.9.0",
    "coverage==7.4.0",
    "pre-commit==3.6.0",
    "ruff>=0.11.5",
]
[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    "*/asgi.py",
    "*/wsgi.py",
    "*/settings/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true
